--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 }
 body {
 	font-family: 'Rubik', sans-serif;
@@ -65,4 +65,8 @@ section {
 	display: inline-block;
 	padding: 16px 32px;
 	border-radius: 10px;
+}
+
+.btn:hover{
+  opacity: .9;
 }
