--- a/css/app-layout.css
+++ b/css/app-layout.css
@@ -43,7 +43,7 @@ menu div:last-child {
 }
 section {
 	background-color: #dee2e6;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 .emails {
 	padding: 12px;
